# ecu-rag-agent-challenge

./: .env  .gitignore  .pylintrc  README.md  agent.py  build_model.py  dockerfile  main.py  mlflow.db  model.py  pyproject.toml  rag.py  runMLflowModelServe.bat  test.py  test_md_load.py
chroma_db/ecu_700/: chroma.sqlite3
chroma_db/ecu_800B/: chroma.sqlite3
chroma_db/ecu_800P/: chroma.sqlite3
data/: ECU-700_Series_Manual.md  ai_engineering_code_challenge_extern.md
ecu_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mlruns/727476916939745106/: meta.yaml
mlruns/727476916939745106/e9f28ed67451426abd761ecd782b4b76/: meta.yaml
mlruns/727476916939745106/e9f28ed67451426abd761ecd782b4b76/outputs/m-a19f4a6ce65745afa7faf46939ee6422/: meta.yaml
mlruns/727476916939745106/e9f28ed67451426abd761ecd782b4b76/tags/: mlflow.runName
mlruns/727476916939745106/models/m-a19f4a6ce65745afa7faf46939ee6422/: meta.yaml
mlruns/727476916939745106/models/m-a19f4a6ce65745afa7faf46939ee6422/artifacts/: MLmodel  conda.yaml  python_env.yaml  python_model.pkl  requirements.txt
models/test_model/: MLmodel  conda.yaml  python_model.pkl  requirements.txt
models/test_model/artifacts/chroma_db/ecu_700/: chroma.sqlite3
models/test_model/artifacts/chroma_db/ecu_800B/: chroma.sqlite3
models/test_model/artifacts/chroma_db/ecu_800P/: chroma.sqlite3
models/test_model/code/src/: rag.py  tools.py
scripts/: build_model.py  mlflow.db
src/: agent.py  api.py  model.py  tools.py  utils.py
