[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecu_agent"
version = "0.1.0"
dependencies = [
    "langchain>=0.2.0",
    "langgraph>=0.1.0",
    "langchain-ollama>=0.1.0",
    "chromadb>=0.4.22",
    "langchain-chroma>=0.1.0",
    "sentence-transformers>=2.2.0",
    "langchain-huggingface>=0.1.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "accelerate>=0.25.0",
    "markdown>=3.5.0",
    "tiktoken>=0.5.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
]
api = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ecu_agent*"]